# plex-presence

./: Cargo.toml
src/: activity_monitor.rs  arguments.rs  cleanup.rs  config.rs  main.rs
src/discord/: client.rs  mod.rs  rich_presence.rs
src/plex/: activity.rs  client.rs  media.rs  mod.rs
