[package]
name = "plex-presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = {version = "3.4.4", features = ["termination"]}
directories = "5"
discord-rich-presence = "0.2.3"
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8"
urlencoding = "2.1.3"
single-instance = "0.3"
nix = { version = "0.28.0", features = ["socket", "process", "signal"] }
anyhow = "1.0.81"
